Moved lots of the calculation and vector-managing code into a class so it can be re-used in other programs.

--- a/vr_latency_tester/CMakeLists.txt
+++ b/vr_latency_tester/CMakeLists.txt
@@ -41,6 +41,8 @@ add_library(DeviceThread
     DeviceThread.h
     DeviceThreadVRPNAnalog.cpp
     DeviceThreadVRPNAnalog.h
+    ArduinoComparer.cpp
+    ArduinoComparer.h
 )
 target_link_libraries(DeviceThread
   ${VRPN_SERVER_LIBRARIES}
