Adding a class that can report tracker values as vectors to the latency tester.

--- a/vr_latency_tester/CMakeLists.txt
+++ b/vr_latency_tester/CMakeLists.txt
@@ -41,6 +41,8 @@ add_library(DeviceThread
     DeviceThread.h
     DeviceThreadVRPNAnalog.cpp
     DeviceThreadVRPNAnalog.h
+    DeviceThreadVRPNTracker.cpp
+    DeviceThreadVRPNTracker.h
     ArduinoComparer.cpp
     ArduinoComparer.h
 )
