Started the implementation of a head-shake-based latency tester that estimates the oscillation frequency required to make the display 180 degrees out of phase with the motion and then computing the latency associated with that period.

--- a/vr_latency_tester/CMakeLists.txt
+++ b/vr_latency_tester/CMakeLists.txt
@@ -48,6 +48,8 @@ add_library(DeviceThread
     DeviceThreadVRPNTracker.h
     ArduinoComparer.cpp
     ArduinoComparer.h
+    OscillationEstimator.cpp
+    OscillationEstimator.h
 )
 target_link_libraries(DeviceThread
   ${VRPN_SERVER_LIBRARIES}
@@ -65,4 +67,10 @@ target_link_libraries(arduino_inputs_latency_test
   DeviceThread
 )
 install(TARGETS arduino_inputs_latency_test DESTINATION bin)
+
+add_executable(head_shake_latency_test head_shake_latency_test.cpp)
+target_link_libraries(head_shake_latency_test
+  DeviceThread
+)
+install(TARGETS head_shake_latency_test DESTINATION bin)
 
