Added OSVR RenderManager display latency test program.  It is not completely implemented, but it does compile and link and use all of the required functionality.

--- a/vr_latency_tester/CMakeLists.txt
+++ b/vr_latency_tester/CMakeLists.txt
@@ -31,6 +31,14 @@ if (UNIX)
     set(VRPN_GENERIC_SERVER_LIBS gpsnmea vrpn_atmel)
 endif()
 
+# Common libraries we can make use if
+find_package(OSVRRenderManager)
+if (OSVRRENDERMANAGER_FOUND)
+    include_directories(BEFORE ${OSVRRenderManager_INCLUDE_DIRS})
+    find_package(osvr REQUIRED)
+    find_package(OpenGL REQUIRED)
+endif()
+
 # Will know to look for the other VRPN libraries in the
 # INSTALL directory if we're using Superbuild.  Otherwise,
 # they will be found in the same place the server library
@@ -73,4 +81,15 @@ target_link_libraries(head_shake_latency_test
   DeviceThread
 )
 install(TARGETS head_shake_latency_test DESTINATION bin)
+
+if (OSVRRENDERMANAGER_FOUND)
+    add_executable(RenderManager_latency_test RenderManager_latency_test.cpp)
+    target_link_libraries(RenderManager_latency_test
+      DeviceThread
+      ${OSVRRenderManager_LIBRARIES}
+      ${OPENGL_LIBRARY}
+      osvr::osvrClientKitCpp
+    )
+    install(TARGETS RenderManager_latency_test DESTINATION bin)
+endif()
 
